# paper-search

./: .gitignore  Benchmark.py  README.md  app.py  conftest.py  main.py  paper_search_engine.py  pyproject.toml  rag_pipeline.mermaid  semantic_search.code-workspace
app_style/: styles.css
benchmark_results/: 20260505_130112_26e561.json  20260505_131126_e1d619.json  20260505_132725_e1d619.json  20260505_145434_e1d619.json  20260505_152810_0ac38f.json  20260505_154720_ccca58.json  20260505_161135_d569f6.json  20260505_163120_9ad8e9.json
benchmarks/: 1603.02754.yaml  xgboost_benchmark.yaml
conf/: config.yaml
conf/generation/: default.yaml
conf/model/: default.yaml  fast.yaml
conf/retrieval/: default.yaml
tests/: test_retrieval.py
