[project]
name = "semantic-search"
version = "0.1.0"
description = "Semantic Search & RAG Pipeline for Research Papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "psutil>=7.2.2",
    "pymupdf==1.23.8",
    "streamlit>=1.56.0",
    "torch==2.4.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.3",
]
