[project]
name = "semantic-search"
version = "0.2.0"
description = "Semantic Search & RAG Pipeline for Research Papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "hydra-core>=1.3.2",
    "nltk>=3.9.4",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "psutil>=7.2.2",
    "pymupdf==1.23.8",
    "pytest>=9.0.3",
    "rank-bm25>=0.2.2",
    "streamlit>=1.56.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.3",
    "transformers>=5.5.3",
]
